# iam-compact-t31-scenario-metadata

./: .gitignore  pyproject.toml
download/: .gitignore  download_data.sh
notebooks/: add_metadata_notebook.py
output/: .gitignore
src/iam_compact_t31_scenario_metadata/: criteria.py  criteria_def.py  criteria_eval.py  process_vars.py
