[project]
name = "iam-compact-t31-scenario-metadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
requires-python = ">=3.13"
dependencies = [
    "iam-validation",
]

[project.scripts]
iam-compact-t31-scenario-metadata = "iam_compact_t31_scenario_metadata:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
iam-validation = { path = "../iam-validation" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.0",
    "nbformat>=5.10.4",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
]
